# My_FastAPI_App

./: .gitignore  docker-compose.yaml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
app1/: docker-compose.yaml
app1/.devcontainer/: devcontainer.json
app1/server/: auth.py  database.py  init.sql  main.py  rag.py  requirements.txt  server.Dockerfile
app1/server/tests/: test_rag_logic.py
src/: auth.py  database.py  init.sql  main.py  rag.py  requirements.txt
src/backend/: auth.py  backend.Dockerfile  database.py  main.py  pyproject.toml  rag.py  requirements.txt
src/backend/tests/: test_main.py
src/frontend/: frontend.Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: apiUtils.ts  ingest.ts  login.ts  main.ts  manageDocs.ts  query.ts  register.ts  router.ts  types.ts  upload.ts
src/frontend/src/styles/: login.css  manageDocs.css  query.css  register.css
src/tests/: test_db.py
storage/upload/: test.txt
