[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "masashi",email = "s.masashi.shukatsu@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "google-genai (==1.72.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "cryptography (>=47.0.0,<48.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "types-aiofiles (>=25.1.0.20260409,<26.0.0.0)",
    "types-python-jose (>=3.5.0.20260408,<4.0.0.0)",
    "types-pymysql (>=1.1.0.20260408,<2.0.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "mypy (>=1.20.2,<2.0.0)"
]
